fix project alignment for screen less than 1200px

--- a/index.css
+++ b/index.css
@@ -199,6 +199,10 @@ p {
     color: var(--text-bg);
 }
 
+.project-desc {
+    padding-bottom: 1.2em;
+}
+
 /*=========== MEDIA QUERY =========*/
 
 @media (min-width: 420px){
@@ -210,6 +214,10 @@ p {
     .data {
         flex-direction: row;
         justify-content: space-around;
+    }
+
+    .project-container {
+        margin: 0 auto;
     }
 }
 
